infra/k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cets
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
